force-app/main/default/objects/Activity/fields/Area_Classificacao__c.field-meta.xml
<CustomField>
    <fullName>Area_Classificacao__c</fullName>
    <description
  >Area de classificacao da atividade, derivada da hierarquia de Role do responsavel. Populado automaticamente pelo Flow Task_ClassificacaoAreaDepartamento. Valores esperados: Administrativo | Comercial | Engenharia | Nao Classificada.</description>
    <label>Área de Classificação</label>
    <length>255</length>
    <type>Text</type>
</CustomField>