force-app/main/default/objects/Activity/fields/AreaFml__c.field-meta.xml
<CustomField>
    <fullName>AreaFml__c</fullName>
    <description>Area de classificacao da atividade. Formula derivada de Owner.Division.</description>
    <formula>Owner:User.Division</formula>
    <label>Área de Classificação</label>
    <type>Text</type>
</CustomField>