force-app/main/default/objects/Activity/fields/ConcessionariaEnergia__c.field-meta.xml
<CustomField>
    <fullName>ConcessionariaEnergia__c</fullName>
    <label>Concessionária Energia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>