force-app/main/default/objects/Activity/fields/CreateNewTaskAutomatically__c.field-meta.xml
<CustomField>
    <fullName>CreateNewTaskAutomatically__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Criar nova task automaticamente?</label>
    <type>Checkbox</type>
</CustomField>