force-app/main/default/objects/Activity/fields/DateAdditionalMaterial__c.field-meta.xml
<CustomField>
    <fullName>DateAdditionalMaterial__c</fullName>
    <label>Data de entrega materiais complementares</label>
    <type>Date</type>
</CustomField>