force-app/main/default/objects/Activity/fields/DateInspection__c.field-meta.xml
<CustomField>
    <fullName>DateInspection__c</fullName>
    <label>Data de aceite - Vistoria Concessionária</label>
    <type>DateTime</type>
</CustomField>