force-app/main/default/objects/Activity/fields/DateInspectionRequest__c.field-meta.xml
<CustomField>
    <fullName>DateInspectionRequest__c</fullName>
    <label>Data de aceite da vistoria</label>
    <type>Date</type>
</CustomField>