force-app/main/default/objects/Activity/fields/Departamento_Classificacao__c.field-meta.xml
<CustomField>
    <fullName>Departamento_Classificacao__c</fullName>
    <description>Departamento de classificacao da atividade. Populado automaticamente pelo Flow Task_ClassificacaoAreaDepartamento. Origem: campo padrao Owner.Department do Usuario responsavel. Bucket de excecao: Departamento nao informado quando Department estiver vazio.</description>
    <label>Departamento de Classificação</label>
    <length>255</length>
    <type>Text</type>
</CustomField>