force-app/main/default/objects/Activity/fields/DepartamentoFml__c.field-meta.xml
<CustomField>
    <fullName>DepartamentoFml__c</fullName>
    <description>Departamento de classificacao da atividade. Formula derivada de Owner.Department.</description>
    <formula>Owner:User.Department</formula>
    <label>Departamento de Classificação</label>
    <type>Text</type>
</CustomField>