force-app/main/default/objects/Activity/fields/Descricao__c.field-meta.xml
<CustomField>
    <fullName>Descricao__c</fullName>
    <description>Campo para descrever a tarefa.</description>
    <label>Descrição</label>
    <type>TextArea</type>
</CustomField>