force-app/main/default/objects/Activity/fields/DispensarAtividade__c.field-meta.xml
<CustomField>
    <fullName>DispensarAtividade__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marcar quando a atividade não se aplica e deve ser dispensada.</description>
    <label>Dispensar atividade</label>
    <type>Checkbox</type>
</CustomField>