force-app/main/default/objects/Activity/fields/FinishProjectDate__c.field-meta.xml
<CustomField>
    <fullName>FinishProjectDate__c</fullName>
    <label>Data de conclusão da obra</label>
    <type>Date</type>
</CustomField>