force-app/main/default/objects/Activity/fields/HoraVencimento__c.field-meta.xml
<CustomField>
    <fullName>HoraVencimento__c</fullName>
    <label>Hora de Vencimento</label>
    <type>Time</type>
</CustomField>