force-app/main/default/objects/Activity/fields/IgnorarValidacao__c.field-meta.xml
<CustomField>
    <fullName>IgnorarValidacao__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Indica se esta tarefa deve ser ignorada na validação de bloqueio de avanço de status (ex: tarefas paralelas ao fluxo de viabilidade).</description>
    <label>Ignorar Validação de Bloqueio</label>
    <type>Checkbox</type>
</CustomField>