force-app/main/default/objects/Activity/fields/InspectionDays__c.field-meta.xml
<CustomField>
    <fullName>InspectionDays__c</fullName>
    <label>Prazo para vistoria (dias)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>