force-app/main/default/objects/Activity/fields/InstallationPlanned__c.field-meta.xml
<CustomField>
    <fullName>InstallationPlanned__c</fullName>
    <label>Previsão de instalação</label>
    <type>Date</type>
</CustomField>