force-app/main/default/objects/Activity/fields/IsCurrentDay__c.field-meta.xml
<CustomField>
    <fullName>IsCurrentDay__c</fullName>
    <formula>ActivityDate = TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>É dia do vencimento?</label>
    <type>Checkbox</type>
</CustomField>