force-app/main/default/objects/Activity/fields/jif6QH2I3t7Mptz__GTM__c.field-meta.xml
<CustomField>
    <fullName>jif6QH2I3t7Mptz__GTM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GTM</label>
    <referenceTo>jif6QH2I3t7Mptz__GTM__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>