force-app/main/default/objects/Activity/fields/KWP__c.field-meta.xml
<CustomField>
    <fullName>KWP__c</fullName>
    <label>KWP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>