force-app/main/default/objects/Activity/fields/MetodoDeFollowup__c.field-meta.xml
<CustomField>
    <fullName>MetodoDeFollowup__c</fullName>
    <label>Método de Follow-up</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ligação</fullName>
            </value>
            <value>
                <fullName>WhatsApp</fullName>
            </value>
            <value>
                <fullName>Automático</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>