force-app/main/default/objects/Activity/fields/MotivoDispensa__c.field-meta.xml
<CustomField>
    <fullName>MotivoDispensa__c</fullName>
    <description>Motivo pelo qual a atividade foi dispensada.</description>
    <label>Motivo da dispensa</label>
    <type>TextArea</type>
</CustomField>