force-app/main/default/objects/Activity/fields/NextNotification__c.field-meta.xml
<CustomField>
    <fullName>NextNotification__c</fullName>
    <label>Proxíma Notificação</label>
    <length>255</length>
    <type>Text</type>
</CustomField>