force-app/main/default/objects/Activity/fields/NomeDoProprietario__c.field-meta.xml
<CustomField>
    <fullName>NomeDoProprietario__c</fullName>
    <formula>Owner:User.FirstName + &quot; &quot; + Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome do Proprietário</label>
    <type>Text</type>
</CustomField>