force-app/main/default/objects/Activity/fields/NotificadoAntesVencer__c.field-meta.xml
<CustomField>
    <fullName>NotificadoAntesVencer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notificado Antes de Vencer</label>
    <type>Checkbox</type>
</CustomField>