force-app/main/default/objects/Activity/fields/NotificadoAposVencer__c.field-meta.xml
<CustomField>
    <fullName>NotificadoAposVencer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notificado Após Vencer</label>
    <type>Checkbox</type>
</CustomField>