force-app/main/default/objects/Activity/fields/Observacoes__c.field-meta.xml
<CustomField>
    <fullName>Observacoes__c</fullName>
    <label>Observacoes</label>
    <type>TextArea</type>
</CustomField>