force-app/main/default/objects/Activity/fields/Origem__c.field-meta.xml
<CustomField>
    <fullName>Origem__c</fullName>
    <formula>IF(
    NOT(ISBLANK(WhatId)),
    CASE(
        LEFT(WhatId, 3),
        &quot;001&quot;, &quot;Conta&quot;,
        &quot;003&quot;, &quot;Contato&quot;,
        &quot;500&quot;, &quot;Caso&quot;,
        &quot;006&quot;, &quot;Oportunidade&quot;,
        &quot;00T&quot;, &quot;Tarefa&quot;,
        &quot;701&quot;, &quot;Campanha&quot;,
        &quot;800&quot;, &quot;Contrato&quot;,
        &quot;Event&quot;, &quot;Evento&quot;,
        &quot;a03&quot;, &quot;Projetos&quot;,
        &quot;Outro Objeto&quot;
    ),
    CASE(
        LEFT(WhoId, 3),
        &quot;001&quot;, &quot;Conta&quot;,
        &quot;003&quot;, &quot;Contato&quot;,
        &quot;500&quot;, &quot;Caso&quot;,
        &quot;006&quot;, &quot;Oportunidade&quot;,
        &quot;00T&quot;, &quot;Tarefa&quot;,
        &quot;701&quot;, &quot;Campanha&quot;,
        &quot;800&quot;, &quot;Contrato&quot;,
        &quot;Event&quot;, &quot;Evento&quot;,
        &quot;a03&quot;, &quot;Projetos&quot;,
        &quot;Outro Objeto&quot;
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Origem</label>
    <type>Text</type>
</CustomField>