force-app/main/default/objects/Activity/fields/OwnerManagerName__c.field-meta.xml
<CustomField>
    <fullName>OwnerManagerName__c</fullName>
    <formula>IF(ISBLANK(Owner:User.UserRole.ParentRole.Name), &quot;&quot;, Owner:User.UserRole.ParentRole.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Role Pai do Proprietario</label>
    <type>Text</type>
</CustomField>