force-app/main/default/objects/Activity/fields/PrazoCongelado__c.field-meta.xml
<CustomField>
    <fullName>PrazoCongelado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica se o prazo desta atividade está congelado por regressão de fase.</description>
    <label>Prazo congelado</label>
    <type>Checkbox</type>
</CustomField>