force-app/main/default/objects/Activity/fields/PrazoDiasUteis__c.field-meta.xml
<CustomField>
    <fullName>PrazoDiasUteis__c</fullName>
    <label>Prazo (dias úteis)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>