force-app/main/default/objects/Activity/fields/ResponsavelAcompanhar__c.field-meta.xml
<CustomField>
    <fullName>ResponsavelAcompanhar__c</fullName>
    <label>Responsável por acompanhar</label>
    <length>255</length>
    <type>Text</type>
</CustomField>