force-app/main/default/objects/Activity/fields/ResponsavelReceber__c.field-meta.xml
<CustomField>
    <fullName>ResponsavelReceber__c</fullName>
    <label>Responsável por receber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>