force-app/main/default/objects/Activity/fields/SendNotification__c.field-meta.xml
<CustomField>
    <fullName>SendNotification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enviar Notificação?</label>
    <type>Checkbox</type>
</CustomField>