force-app/main/default/objects/Activity/fields/StartDateWork__c.field-meta.xml
<CustomField>
    <fullName>StartDateWork__c</fullName>
    <label>Data de início da obra</label>
    <type>Date</type>
</CustomField>