force-app/main/default/objects/Activity/fields/StatusProjeto__c.field-meta.xml
<CustomField>
    <fullName>StatusProjeto__c</fullName>
    <label>Status do Projeto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>