force-app/main/default/objects/Activity/fields/TipoObraProjeto__c.field-meta.xml
<CustomField>
    <fullName>TipoObraProjeto__c</fullName>
    <label>Tipo de Obra/Projeto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>